--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="side-area-item">
                     <div class="output-area-tag"><span>Github Info</span></div>
                     <ul id="help-output" class="output-area">
-                        <li>Repository: basic2lisp</li>
+                        <li>Repository: <a href="https://github.com/HanaYabuki/basic2lisp">basic2lisp</a></li>
                         <li>Author: <a href="https://github.com/HanaYabuki">HanaYabuki</a></li>
                     </ul>
                 </div>
