--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <div class="side-area-item">
                     <div class="output-area-tag"><span>Help</span></div>
                     <ul id="help-output" class="output-area">
-                        <li>Ctrl + F9 = Compile</li>
-                        <li>Ctrl + F10 = Run</li>
-                        <li>Ctrl + F11 = Clear</li>
-                        <li>Ctrl + S = Save</li>
+                        <li>Ctrl + F9 = <span class="fake-a" onclick="compile_basic()">Compile</span></li>
+                        <li>Ctrl + F10 = <span class="fake-a" onclick="run_lisp()">Run</span></li>
+                        <li>Ctrl + F11 = <span class="fake-a" onclick="clear_input()">Clear</span></li>
+                        <li>Ctrl + S = <span class="fake-a" onclick="save_code()">Save</span></li>
                         <li><span class="fake-a" onclick="show_help()">Get More Help Info</span></li>
                     </ul>
                 </div>
